--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     
     <title>Дипломный проект</title>
   </head>
-  <body id="root">
+  <body >
+    <div id="root"></div>
     <noscript></noscript>
   </body>
 </html>
